@@ -130,9 +130,6 @@ Attributes
         Rcpp::depends attribute and do the right thing (use inline plugins
         to get the right Makevars, etc.)
     
-    o   Mechanism for users to include additional types and classes
-        in header generated by Rcpp::interfaces
-
     o   Add unit tests 
 
     o   Mechanism for specifying default values for exported R functions
