@@ -22,7 +22,10 @@ The \code{Rcpp::interfaces} attribute is added to a C++ source file to specify w
     When \code{cpp} bindings are requested code is generated as follows:
 
 \enumerate{
-    \item Bindings are generated into a header file located in the \code{inst/include} directory of the package using the naming convention \emph{PackageName.h}
+    \item Bindings are generated into a header file located in the \code{inst/include} directory of the package using the naming convention \emph{PackageName_RcppExports.h}
+    \item If not already present, an additional header file named \emph{PackageName.h} is also generated which in turn includes the Rcpp exports header. 
+    
+    In the case that you already have a \emph{PackageName.h} header for your package then you can manually add an include of the Rcpp exports header to it to make the exported functions available to users of your package.
     \item The generated header file allows calling the exported C++ functions without any linking dependency on the package (this is based on using the \code{R_RegisterCCallable} and \code{R_GetCCallable} functions).
     \item The exported functions are defined within a C++ namespace that matches the name of the package.
 }
@@ -46,7 +49,7 @@ For example, an exported C++ function \code{foo} could be called from package \c
 
     If a file by the name of \emph{PackageName.h} that wasn't generated by \code{compileAttributes} already exists in in the \code{inst/include} directory then it will not be overwritten (rather, an error will occur).
     
-    A static naming scheme for generated header files is used to ensure consistent usage semantics for clients of exported \code{cpp} interfaces. Packages that wish to export more complex interfaces or additional C++ types are therefore typically better off not using this mechanism.
+    A static naming scheme for generated header files and namespaces is used to ensure consistent usage semantics for clients of exported \code{cpp} interfaces. Packages that wish to export more complex interfaces or additional C++ types are therefore typically better off not using this mechanism.
 
     The \code{Rcpp::interfaces} attribute is specified using a syntax compatible with the new \href{http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2008/n2761.pdf}{generalized attributes} feature of the C++11 standard. Note however that since this feature is not yet broadly supported by compilers it needs to be specified within a comment (see examples below).
 }
